basic widget setup

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-draggable": "^4.4.3",
     "react-rnd": "^10.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "use-fit-text": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
