--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-redux": "^7.2.1",
     "react-rnd": "^10.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "use-fit-text": "^2.3.0"
   },
   "scripts": {
