--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.19.1",
     "install": "^0.13.0",
     "npm": "^6.14.8",
     "rc-input-number": "^6.0.0",
