--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "customize-cra": "^1.0.0",
     "firebase": "^7.19.1",
     "install": "^0.13.0",
     "npm": "^6.14.8",
     "rc-input-number": "^6.0.0",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-keydown": "^1.9.12",
     "react-redux": "^7.2.1",
     "react-rnd": "^10.2.2",
     "react-router-dom": "^5.2.0",
@@ -24,9 +27,9 @@
     "use-fit-text": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.5"
+  },
+  "plugins": [
+    "plugin-proposal-decorators"
+  ]
 }
