--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && echo '/* /index.html 200' | cat >build/_redirects ",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
