--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-draggable": "^4.4.3",
     "react-keydown": "^1.9.12",
     "react-redux": "^7.2.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-rnd": "^10.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
