--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-bootstrap": "^1.3.0",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-keydown": "^1.9.12",
