--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "customize-cra": "^1.0.0",
     "firebase": "^7.19.1",
     "install": "^0.13.0",
+    "lz-string": "^1.4.4",
     "npm": "^6.14.8",
     "rc-input-number": "^6.0.0",
     "react": "^16.13.1",
