--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-rnd": "^10.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-typist": "^2.0.5",
     "redux": "^4.0.5",
     "use-fit-text": "^2.3.0"
   },
