--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^7.19.1",
     "install": "^0.13.0",
     "lz-string": "^1.4.4",
+    "node-fetch": "^2.6.1",
     "npm": "^6.14.8",
     "rc-input-number": "^6.0.0",
     "react": "^16.13.1",
